# OmniContact_sim2sim

./: .gitignore  MUJOCO_LOG.TXT  README.md  analyze_logs.py  analyze_logs_joints.py  calc_pose.py  commit_message.txt  diff_omnicontact.txt  fix_deploy_scripts.py  object_pose_logging.txt  object_pose_logging_90Degree_LoseTag.txt  object_pose_logging_real.txt  object_pose_logging_sim.txt  object_pose_logging_sim_cosSoft.txt  object_pose_logging_stand_test.txt  object_pose_logging_stand_test_real.txt  object_pose_logging_stand_test_real1.txt  object_pose_logging_stand_test_real2.txt  object_pose_logging_stand_test_real3.txt  object_pose_logging_stand_test_real4.txt  object_pose_logging_stand_test_real5.txt  object_pose_logging_stand_test_real6.txt  parse_log3.py  parse_log_sim.py  plot_transition.py  run_transition_comparison.py  test_cfgen.py  test_math.py  test_ref_phase.py  transition_log_AFTER_no_history.txt  transition_log_AFTER_with_blend.txt  transition_log_BEFORE_no_blend.txt  transition_log_stand_test.txt  transition_log_stand_test150.txt  transition_log_stand_test160.txt  transition_log_stand_test_real7221720.txt  transition_log_stand_test_sim_150.txt  transition_log_stand_test_sim_150_50.txt  transition_log_stand_test_sim_200.txt  transition_log_stand_test_sim_200_50.txt  (+1 more)
FSM/: FSM.py
common/: ctrlcomp.py  joystick.py  mujoco_kinematics.py  utils.py
deploy_omnicontact/: analyze_pose_transforms.py  box_tag_config.py  check_udp_traffic.py  data_flow_and_pose_source_analysis.txt  debug_dds.py  (+31 more)
deploy_omnicontact/cpp/: CMakeLists.txt  real_robot_interface_cpp.cpp
(+113 files in other folders)
